<resources>
    <string name="app_name">ToolsPitch</string>
    <string name="title">Create your listing</string>
    <string name="introQuestion">Would you like to...</string>
    <string name="listingButton">Create a listing</string>
    <string name="viewButton">View listings</string>
    <string name="listingType">Type:</string>
    <string name="price">Price: $</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="listingTitle">Title</string>
    <string name="description">Write a brief description...</string>
    <string name="addImage">Add an image</string>
    <string name="publish">Publish</string>
    <string name="title2">Search for listings</string>
    <string name="keyword">Keywords:</string>
    <string name="priceMin">Minimum Price: $</string>
    <string name="priceMaximum">Maximum Price: $</string>
    <string name="search">Search</string>
    <string name="login1">Please enter your login: </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login2">Login</string>
    <string name="createAccount">Create an Account</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="loginMain">You are currently not logged in.</string>
    <string name="Service">Service</string>
    <string name="Equipment">Equipment</string>
    <string name="ListingTypeOption">Would you like to advertise</string>
    <string name="OrA">or</string>
    <string name="backToMain">Back to Main</string>
    <string name="name">name</string>
    <string name="youMust">You must be logged in before creating or searching for a listing.</string>
    <string name="typeeors">"Type "e" for "equipment" or "s" for "service"</string>
    <string name="only">Only in My Location</string>
    <string name="wantedHeight" />
    <string name="wantedLocation" />
</resources>
