<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    tools:context=".SearchForListings"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/searchListingsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="casual"
        android:text="@string/title2"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:text="@string/typeeors"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/typeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/listingType"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/maxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/priceMaximum"
        android:inputType="numberDecimal"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/locationEdit"
        android:layout_width="193dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:hint="Search by city, state"
        android:text="@string/wantedLocation" />

    <Button
        android:id="@+id/onlyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/only"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/search"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/backToMain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/backToMain"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black" />
</LinearLayout>