<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zeynepalptekin.tariccostechsavvycodingnightmares.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/wouldYouText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="35dp"
        android:text="@string/introQuestion"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/createListingButton"
        app:layout_constraintEnd_toEndOf="@+id/createListingButton" />

    <Button
        android:id="@+id/createListingButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="213dp"
        android:text="@string/listingButton"
        app:layout_constraintBottom_toTopOf="@+id/viewListingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewListingButton"
        android:layout_width="0dp"
        android:layout_height="146dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:text="@string/viewButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createListingButton" />

    <TextView
        android:id="@+id/loginBanner"
        android:layout_width="217dp"
        android:layout_height="34dp"
        android:layout_marginBottom="44dp"
        android:text="@string/loginMain"
        app:layout_constraintBottom_toTopOf="@+id/mainLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/loginMain" />

    <Button
        android:id="@+id/mainLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login2"
        app:layout_constraintBottom_toTopOf="@+id/wouldYouText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/login2" />

</android.support.constraint.ConstraintLayout>
