<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zeynepalptekin.tariccostechsavvycodingnightmares.ChoseListingType">

    <Button
        android:id="@+id/equipmentButton"
        android:layout_width="175dp"
        android:layout_height="0dp"
        android:layout_marginBottom="88dp"
        android:text="@string/Equipment"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orAnTextView" />

    <Button
        android:id="@+id/serviceButton"
        android:layout_width="175dp"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:text="@string/Service"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/orAnTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wouldYouBanner" />

    <TextView
        android:id="@+id/wouldYouBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="86dp"
        android:text="@string/ListingTypeOption"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/serviceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orAnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/OrA"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/equipmentButton"
        app:layout_constraintEnd_toEndOf="@+id/equipmentButton"
        app:layout_constraintStart_toStartOf="@+id/equipmentButton"
        app:layout_constraintTop_toBottomOf="@+id/serviceButton" />

    <Button
        android:id="@+id/backToMain6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="27dp"
        android:text="@string/backToMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/equipmentButton" />
</android.support.constraint.ConstraintLayout>
